k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-api
  template:
    metadata:
      labels:
        app: course-api
    spec:
      containers:
        - name: api
          image: registry.gitlab.com/slvnzsyn50/mlops:latest
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
