k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-api-service
spec:
  selector:
    app: course-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
